--- a/index.html
+++ b/index.html
@@ -2,12 +2,31 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
     <title>Excursion</title>
+    <link rel="stylesheet" href="resources/style.css">
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <p><a href="#">Download Excursion (Coming soon!)</a> </p>
-    <img src="" alt="Phone with video of landscapes">
+    <div class="">
+      <h1>Discover hidden places in the world around you</h1>
+    </div>
+    <div>
+      <p><a class="link" href="#">Download Excursion (Coming soon!)</a><p>
+    </div>
+    <div>
+      <video loop src="./resources/videos/excursion.mp4" autoplay poster="posterimage.jpg">
+    </video>
+    </div>
+    <div>
+      <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    </div>
+    <div class="">
+      <img src="./resources/images/camp.jpg" alt="">
+    </div>
+    <div class="">
+      <img src="./resources/images/phone.png" alt="">
+    </div>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p>Download Exursion (Coming soon!)</p>
   </body>
 </html>
